kubernetes/apps/adguard-home/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home
        rpi5.cluster.policy/egress-kubeapi: "true"
        rpi5.cluster.policy/egress-namespace: "true"
        rpi5.cluster.policy/egress-world: "true"
        rpi5.cluster.policy/ingress-namespace: "true"
        rpi5.cluster.policy/ingress-nginx: "true"
        rpi5.cluster.policy/ingress-nodes: "true"
        rpi5.cluster.policy/ingress-world: "true"
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.51
          ports:
            - protocol: TCP
              containerPort: 53
              name: dns-tcp
            - protocol: UDP
              containerPort: 53
              name: dns-udp
            - protocol: UDP
              containerPort: 67
              name: dhcps-udp
            - protocol: UDP
              containerPort: 68
              name: dhcpc-udp
            - protocol: TCP
              containerPort: 80
              name: http-tcp
            - protocol: TCP
              containerPort: 443
              name: https-tcp
            - protocol: UDP
              containerPort: 443
              name: https-udp
            - protocol: TCP
              containerPort: 853
              name: dns-tls-tcp
            - protocol: UDP
              containerPort: 853
              name: dns-tls-udp
            - protocol: TCP
              containerPort: 3000
              name: http-alt-tcp
            - protocol: UDP
              containerPort: 3000
              name: http-alt-udp
            - protocol: TCP
              containerPort: 5443
              name: dnscrypt-tcp
            - protocol: UDP
              containerPort: 5443
              name: dnscrypt-udp
            - protocol: TCP
              containerPort: 6060
              name: http-pprof
          volumeMounts:
            - name: adguard-home-data
              mountPath: /opt/adguardhome/work
            - name: adguard-home-config
              mountPath: /opt/adguardhome/config
      volumes:
        - name: adguard-home-data
          hostPath:
            path: /mnt/nfs/AppData/adguardhome/work
            type: Directory
        - name: adguard-home-config
          hostPath:
            path: /mnt/nfs/AppData/adguardhome/conf
            type: Directory
