kubernetes/apps/adguard-home/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
spec:
  selector:
    app.kubernetes.io/name: adguard-home
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns-tcp
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns-udp
    - protocol: UDP
      port: 67
      targetPort: 67
      name: dhcp-server-udp
    - protocol: UDP
      port: 68
      targetPort: 68
      name: dhcp-client-udp
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http-main-tcp
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https-tcp
    - protocol: UDP
      port: 443
      targetPort: 443
      name: https-udp
    - protocol: TCP
      port: 853
      targetPort: 853
      name: dns-tls-tcp
    - protocol: UDP
      port: 853
      targetPort: 853
      name: dns-tls-udp
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: https-alt-tcp
    - protocol: UDP
      port: 3000
      targetPort:  3000
      name: https-alt-udp
    - protocol: TCP
      port: 5443
      targetPort: 5443
      name: dns-crypt-tcp
    - protocol: UDP
      port: 5443
      targetPort: 5443
      name: dns-crypt-udp
    - protocol: TCP
      port: 6060
      targetPort: 6060
      name: https-pprof
